# uEtch

./: .gitignore  CMakeLists.txt  README.md
cli/: cli.c
include/: getcomp.h  libuetch.h
src/platform/: dgeom.c  dgeom.h
src/platform/linux/: linux_dgeom.c  linux_dgeom.h
src/platform/nt/: nt_dgeom.c  nt_dgeom.h
